Fix text clipping

--- a/platform/ui/src/gatsby-theme-docz/tailwind.css
+++ b/platform/ui/src/gatsby-theme-docz/tailwind.css
@@ -12,5 +12,5 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   line-height: 1.3;
-  height: 2rem;
+  height: 2.1rem;
 }
